force-app/main/default/objects/ATAK_Project_Financial_Account__c/ATAK_Project_Financial_Account__c.object-meta.xml
<CustomObject>
    <label>ATAK Project Financial Account</label>
    <nameField>
        <label>ATAK Project Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATAK Project Financial Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>