force-app/main/default/objects/ATAK_Project_Financial_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ATAK Project Financial Accounts</relationshipLabel>
    <relationshipName>ATAK_Project_Financial_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>