force-app/main/default/objects/ATAK_Project_Financial_Account__c/fields/ATAK_Project__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project__c</fullName>
    <label>ATAK Project</label>
    <referenceTo>ATAK_Project__c</referenceTo>
    <relationshipLabel>ATAK Project Financial Accounts</relationshipLabel>
    <relationshipName>ATAK_Project_Financial_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>