force-app/main/default/objects/ATAK_Project_Financial_Account__c/fields/ATAK_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project_Code__c</fullName>
    <formula>ATAK_Project__r.SubProject_ATAK__c</formula>
    <label>ATAK Project Code</label>
    <type>Text</type>
</CustomField>